--- a/source/sass/blocks/cruise.scss
+++ b/source/sass/blocks/cruise.scss
@@ -4,9 +4,16 @@
   flex-direction: column;
   justify-content: space-between;
 
-  min-height: 386px;
+  min-height: 365px;
 
   box-sizing: border-box;
+
+  @media (min-width: $table) {
+    height: 376px;
+  }
+  @media (min-width: $desktop) {
+    height: 382px;
+  }
 
   &:focus,
   &:hover {
@@ -15,6 +22,13 @@
       opacity: 1;
       padding: 0 25px;
       transition: opacity 1s;
+
+      @media (min-width: $table) {
+        padding: 0 33px;
+      }
+      @media (min-width: $desktop) {
+        padding: 0 25px;
+      }
     }
     & .cruise__inner {
       position: absolute;
@@ -29,10 +43,18 @@
       box-sizing: border-box;
     }
     & .cruise__title {
-      padding: 30px 25px 12px;
-
+      padding: 28px 25px 12px;
+      margin-bottom: 5px;
       overflow: hidden;
       max-height: 60px;
+
+      @media (min-width: $table) {
+        padding: 28px 33px 12px;
+        margin-bottom: 7px;
+      }
+      @media (min-width: $desktop) {
+        padding: 28px 25px 12px;
+      }
     }
   }
 
@@ -56,25 +78,32 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 386px;
+    height: 365px;
     min-height: 100%;
+
+    @media (min-width: $table) {
+      height: 376px;
+    }
+    @media (min-width: $desktop) {
+      height: 382px;
+    }
   }
   &__title {
     margin: 0;
-    padding: 20px 35px;
+    padding: 16px 26px;
     font-weight: 500;
     font-size: 18px;
     line-height: 150%;
     color: $default-color;
     box-sizing: border-box;
-    @media (min-width: $tablet) {
-      padding: 27px 31px;
+    @media (min-width: $table) {
+      padding: 23px 30px;
     }
   }
 
   &__link {
     display: block;
-    margin-top: 25px;
+    margin-top: 20px;
     padding: 10px;
     font-weight: 600;
     font-size: 14px;
@@ -90,11 +119,17 @@
     &:hover {
       opacity: 0.5;
     }
+    @media (min-width: $desktop) {
+      margin-top: 23px;
+    }
   }
   &__item {
-    margin-bottom: 10px;
+    margin-bottom: 7px;
     font-size: 14px;
     line-height: 140%;
+    @media (min-width: $table) {
+      margin-bottom: 10px;
+    }
   }
   &__item-title {
     margin-bottom: 4px;
