--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -6,7 +6,7 @@
   line-height: 140%;
   font-weight: 600;
 
-  @media (min-width: $tablet) {
+  @media (min-width: $table) {
     max-width: 205px;
     font-size: 26px;
   }
