--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -8,6 +8,21 @@ body {
   line-height: $mainLineHeight;
   color: $primary-color;
   scroll-behavior: smooth;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-image: url('../img/mob.jpg');
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
 }
 
 .overlay {
