--- a/source/sass/blocks/nearest-cruises.scss
+++ b/source/sass/blocks/nearest-cruises.scss
@@ -1,26 +1,37 @@
 .nearest-cruises {
-  padding: 57px 0 35px;
+  padding: 55px 0 40px;
 
-  @media (min-width: $tablet) {
-    padding: 94px 0 70px;
+  @media (min-width: $table) {
+    padding: 87px 0 70px;
   }
   @media (min-width: $desktop) {
-    padding: 115px 0 90px;
+    padding: 108px 0 87px;
+  }
+
+  &__container {
+    padding: 0 22px;
+    @media (min-width: $table) {
+      padding: 0 60px;
+    }
+    @media (min-width: $desktop) {
+      padding: 0 115px;
+    }
   }
 
   & h2 {
-    margin: 0 auto 32px;
+    margin: 0 auto 30px;
     font-size: 24px;
     line-height: 140%;
     font-weight: 600;
     text-align: center;
 
-    @media (min-width: $tablet) {
+    @media (min-width: $table) {
       margin-bottom: 50px;
       max-width: 100%;
       font-size: 26px;
     }
     @media (min-width: $desktop) {
+      margin-bottom: 48px;
       font-size: 28px;
       line-height: 150%;
       max-width: 100%;
@@ -28,31 +39,41 @@
   }
 
   &__items {
-    padding: 0 10px;
-    column-count: 1;
-    column-gap: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 100%;
     box-sizing: border-box;
-
-    @media (min-width: 500px) {
-      column-count: 2;
-    }
-
-    @media (min-width: 767px) {
-      column-gap: 30px;
-      padding: 0 20px;
-    }
-    @media (min-width: $desktop) {
-      column-count: 4;
-      column-gap: 30px;
-      padding: 0 10px;
-    }
   }
 
   &__item {
     flex-grow: 1;
-    margin-bottom: 30px;
+    margin-bottom: 28px;
     width: 100%;
     box-sizing: border-box;
+
+    @media (min-width: 600px) {
+      margin-bottom: 30px;
+      width: calc(50% - 30px);
+      &:not(:nth-child(2n)) {
+        margin-right: 30px;
+      }
+    }
+
+    @media (min-width: $desktop) {
+      width: calc(100% / 3 - 30px);
+      max-width: 285px;
+      margin-right: 30px;
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+    }
+    @media (min-width: 1200px) {
+      width: calc(25% - 30px);
+
+      &:not(:nth-child(4n)) {
+        margin-right: 30px;
+      }
+    }
   }
 }
