--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,5 +15,6 @@
 @import "blocks/booking.scss";
 @import "blocks/contacts.scss";
 @import "blocks/social.scss";
+@import "blocks/map.scss";
 @import "blocks/form.scss";
 @import "blocks/page-footer.scss";
