--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   position: relative;
   margin: 0;
@@ -9,16 +13,20 @@ body {
   color: $primary-color;
   scroll-behavior: smooth;
 
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+
   &::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: -1;
     width: 100%;
     height: 100%;
     opacity: 0;
-    background-image: url('../img/mob.jpg');
+    background-image: url('../img/desktop.jpg');
     background-position: 50% 0;
     background-repeat: no-repeat;
     background-size: contain;
