--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -19,9 +19,11 @@
     height: 38px;
   }
   &__pic {
+    fill: $default-color;
+  }
+  & img {
     max-width: 100%;
     height: auto;
     object-fit: cover;
-    fill: $default-color;
   }
 }
