--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -17,9 +17,11 @@
     line-height: 140%;
     color: #f9fbfd;
     text-align: center;
+
     @media (min-width: $table) {
       margin-bottom: 26px;
     }
+
     @media (min-width: $desktop) {
       margin-bottom: 30px;
     }
@@ -29,6 +31,7 @@
     margin-bottom: 16px;
     color: $default-color;
     box-sizing: border-box;
+
     @media (min-width: $table) {
       margin-bottom: 20px;
     }
@@ -53,11 +56,13 @@
     background-color: #f9fbfd;
     box-sizing: border-box;
   }
+
   & input[type="checkbox"]:not(:checked),
   & input[type="checkbox"]:checked {
     position: absolute;
     left: -9999px;
   }
+
   & input[type="checkbox"]:not(:checked) + span,
   & input[type="checkbox"]:checked + span {
     position: relative;
@@ -65,9 +70,8 @@
     cursor: pointer;
   }
 
-  /* checkbox aspect */
-  & input[type="checkbox"]:not(:checked) + span:before,
-  & input[type="checkbox"]:checked + span:before {
+  & input[type="checkbox"]:not(:checked) + span::before,
+  & input[type="checkbox"]:checked + span::before {
     content: "";
     position: absolute;
     left: 0;
@@ -80,9 +84,9 @@
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
   }
-  /* checked mark aspect */
-  & input[type="checkbox"]:not(:checked) + span:after,
-  & input[type="checkbox"]:checked + span:after {
+
+  & input[type="checkbox"]:not(:checked) + span::after,
+  & input[type="checkbox"]:checked + span::after {
     content: " ";
     position: absolute;
     top: 0.2em;
@@ -97,12 +101,13 @@
     color: $primary-color;
     transition: all 0.2s;
   }
-  /* checked mark aspect changes */
-  & input[type="checkbox"]:not(:checked) + span:after {
+
+  & input[type="checkbox"]:not(:checked) + span::after {
     opacity: 0;
     transform: scale(0);
   }
-  & input[type="checkbox"]:checked + span:after {
+
+  & input[type="checkbox"]:checked + span::after {
     opacity: 1;
     transform: scale(1);
   }
